--- a/src/main/resources/messages_cs.properties
+++ b/src/main/resources/messages_cs.properties
@@ -1,45 +1,40 @@
-# Tab titles and button texts from the main application
-loginScreen.title=P?ihlá?ení
-app.title=Plánová? jídla
+loginScreen.title=Prihlaseni
+app.title=Planovac jidla
 recipeDetail.title=Detail receptu
 
-tab.createRecipe=Vytvo?it Recept
+tab.createRecipe=Vytvorit Recept
 tab.recipes=Recepty
-tab.planner=Plánova?
-tab.plan=Plán
+tab.planner=Planovac
+tab.plan=Plan
 button.submit=Potvrdit
-button.addToPlan=P?idat do plánu
+button.addToPlan=Pridat do planu
 button.editRecipe=Upravit recept
 button.deleteRecipe=Smazat
-button.removeFromPlanner=Odstranit z plánu
+button.removeFromPlanner=Odstranit z planu
 button.showRecipeDetail=Zobrazit detail receptu
-button.login=P?ihlásit se
+button.login=Prihlasit se
 button.register=Zaregistrovat se
 
-# Labels and titles in the recipe creation tab
-label.createRecipe.name=Název
+label.createRecipe.name=Nazev
 label.createRecipe.description=Popis
 label.createRecipe.ingredients=Ingredience
 label.createRecipe.instructions=Instrukce
 
-label.recipes.name=Jméno
+label.recipes.name=Jmeno
 label.recipes.details=Detaily
 
-# Labels in the planner tab
-label.planner.mealPlan=Plán vý?ivy na tento týden:
-label.planner.monday=Pond?lí
-label.planner.tuesday=Úterý
-label.planner.wednesday=St?eda
-label.planner.thursday=?tvrtek
-label.planner.friday=Pátek
+label.planner.mealPlan=Plan vyzivy na tento tyden:
+label.planner.monday=Pondeli
+label.planner.tuesday=Utery
+label.planner.wednesday=Streda
+label.planner.thursday=Ctvrtek
+label.planner.friday=Patek
 
-# Login screen labels
-label.login.username=P?ihla?ovací jméno
+label.login.username=Prihlasovaci jmeno
 label.login.password=Heslo
 label.login.status=
 
-# Recipe card labels
-label.recipeCard.name=Jméno
+label.recipeCard.name=Jmeno
 label.recipeCard.description=Popis
 label.recipeCard.instructions=Instrukce
 label.recipeCard.ingredients=Ingredience
